--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,4 +1,6 @@
-v4.4.4 - Stability Hotfix
+v4.4.5 - External Display & Keyboard Fixes
 
 Fixes:
-- Fixed crash in clipboard monitoring (objc_release) that could occur during rapid pasteboard changes
+- Volume/Brightness HUD now appears on external displays even when "hide notch" is enabled
+- Brightness controls now correctly target laptop's built-in display when docked
+- Improved external keyboard media key handling for volume/brightness controls
