Update release notes for v4.4.7

--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,4 +1,5 @@
-v4.4.6 - Stability Hotfix
+v4.4.7 - Visual Polish
 
-Fixes:
-- Fixed crash in brightness monitoring on certain display configurations
+Improvements:
+- Updated shelf control buttons (collapse/trash/settings) to use Liquid Glass style matching macOS 26 Tahoe aesthetic
+- Updated clipboard manager preview GIF
