Update release notes for v4.4.9

--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,4 +1,4 @@
-v4.4.8 - Visual Update
+v4.4.9 - Stability Hotfix
 
-Updates:
-- Updated clipboard manager preview GIF in settings
+Fixes:
+- Fixed potential crash in media key handling (HID race condition)
