Prepare v10.1 release notes

--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,5 +1,10 @@
 ✨ New Features
-- **Show When Idle**: Keep the notch/island visible on external monitors and notchless MacBooks, even when nothing is playing (Settings → External Displays / Display Mode).
+- Clipboard Tags: Organize your clipboard items with custom color-coded tags
+- Tag Management Sheet with dynamic color theming and drag-to-reorder
+- "Never Delete" protection: Tag items to prevent automatic deletion
+- Quick tag assignment from clipboard item detail view
 
 🐛 Bug Fixes
-- Fixed Dynamic Island mode ignoring the idle visibility setting.
+- Notify me! now respects Focus mode / DND (notifications suppressed when Focus is active)
+- Finder Services setup now opens directly to the correct Extensions settings pane
+- Improved tag reordering with smooth animations
