feat(todo): Add edit functionality, multi-undo, cleanup toast, and localization fixes
## ToDo Extension Improvements
- Add task edit/rename with styled popover UI (Cmd+E shortcut)
- Multi-item undo buffer (rapid deletes no longer lose history)
- Cleanup feedback toast shows count when tasks auto-cleaned
- Remove duplicate modifiers in ToDoView and ToDoShelfBar
- Remove unused sortOrder field from ToDoItem model
- Localize all UI strings (action.edit, action.save, action.cancel, task_title, tasks_cleaned_up)

## NotificationHUD Fixes
- Revert playNotificationSound to simple NSSound with Pop fallback
- Remove AudioToolbox import and complex fallback logic
- Clean up debug print statements from triggerFeedback

## NotchShelfView
- Fix ToDo bar visibility using isRemoved state vs todoEnabled
- Consistent state check in height calculation

Files: ToDoManager, ToDoView, ToDoShelfBar, ToDoUndoToast, NotchShelfView, NotificationHUDManager, Localizable.strings

--- a/Droppy/en.lproj/Localizable.strings
+++ b/Droppy/en.lproj/Localizable.strings
@@ -32,6 +32,9 @@
 "priority.help.high" = "Priority: High (click to change)";
 
 /* Actions & Accessibility */
+"action.edit" = "Edit";
+"action.save" = "Save";
+"action.cancel" = "Cancel";
 "action.delete" = "Delete";
 "action.delete_task" = "Delete task";
 "action.mark_complete" = "Mark complete";
@@ -41,6 +44,10 @@
 "action.show_tasks" = "Show tasks";
 "action.close" = "Close";
 "action.install" = "Install";
+
+/* Task Editing */
+"task_title" = "Task title";
+"tasks_cleaned_up %lld" = "%lld tasks cleaned up";
 
 /* Settings */
 "settings.title" = "Settings";
