--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,9 +1,48 @@
-✨ New Features
-- Settings scroll blur: Native blur/fade overlay elegantly hides content behind the header when scrolling
-- Configurable blur strength: Adjust redaction intensity from Strong to Subtle in Element Capture settings
-- Text Recognition (OCR): Quick shortcut to capture screen text, now integrated into Element Capture with configurable keybind
+## 🚀 Droppy v11
 
-🔧 Improvements
-- Crosshair cursor: Drawing tools and area capture now show crosshair for precise selections
-- Screenshot Editor enforces 900pt minimum width to ensure toolbar is always fully visible
-- Settings scroll blur adapts to appearance: ultraThinMaterial blur in transparent mode, smooth black gradient in dark mode
+Droppy v11 is a massive update focused on power features, smoother UX, and a cleaner overall experience.
+
+## ✨ New
+- External brightness and volume controls for connected displays.
+- Full light mode support, including a brand-new transparency mode for light appearance.
+- New **Reminders** extension with native Apple Reminders + Calendar sync, natural language task creation, correct list routing, and full two-way live sync (create/edit/delete).
+- New **Notchface** extension to preview your camera directly from the notch.
+- Major Window Snap expansion:
+  - Modifier-based pointer drag/resize engine.
+  - Live snap-zone preview with commit on mouse-up.
+  - Excluded-app support.
+  - Optional bring-to-front behavior.
+  - Classic and closest-corner resize modes.
+  - Persistent defaults for pointer mode, modifier masks, bring-to-front, resize mode, and excluded bundle IDs.
+- New option to auto-copy OCR results in shared features.
+- New mouse gesture support in the notch with configurable modifiers (Shift/Cmd/Control) to navigate between views like Media HUD and Shelf.
+- New setting to choose the default mail app used by quick actions (also supported in Basket).
+- New multi-basket support with custom-colored top handlers.
+- New basket switcher (Cmd+Tab-style), with instant basket opening, quick basket creation, and customizable shortcut.
+- New onboarding option to fully skip analytics (no installs, no reviews, no tracking).
+- New option to completely disable quick actions.
+- New Terminotch setting to choose which terminal app opens for full terminal mode.
+- New per-extension HUD settings for Notify Me, Termi-notch, High Alert, and Notchface.
+- New battery HUD with a complete visual redesign.
+
+## 🔧 Improvements
+- Element Capture screenshots are now full quality (crisp, lossless-looking output).
+- AirPods/headphones animations have been upgraded for a more premium feel.
+- Connected earphones/AirPods now appear directly in the volume HUD.
+- Animations across the app were revamped for smoother and more efficient motion.
+- Extension icons were updated to remove pixelation and improve sharpness.
+- Visualizer size was reduced to better match album art and feel more cohesive.
+- HUD system refresh:
+  - More premium Caps HUD.
+  - Improved battery animations.
+  - Updated DND HUD.
+  - Expanded media player now shows the updated HUD styles.
+- Extension action flow was cleaned up by replacing ambiguous labels (like “Get”) with clear state-based actions (Install, Disable, Manage).
+
+## 🧹 Cleanup, Stability, and Fixes
+- Removed unused settings and old/dead code.
+- Fixed clipboard tags manager appearance consistency across light, dark, and transparency modes.
+- Added many crash fixes, bug fixes, and polish improvements across Droppy.
+
+## 🔐 Licensing
+Droppy now includes a built-in licensing system to support long-term development and maintenance. Licensing is now integrated directly in the app settings flow.
